feat: 기업별 분석 페이지 추가

--- a/front/package.json
+++ b/front/package.json
@@ -18,12 +18,14 @@
     "apexcharts": "^3.37.1",
     "d3-scale": "^3.3.0",
     "d3-selection": "^1.4.2",
+    "leaflet": "^1.9.3",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-leaflet": "^4.2.1",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
