--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-wordcloud": "^1.2.7",
+    "recharts": "^2.5.0",
     "sass": "^1.59.2",
     "styled-components": "^5.3.8",
     "web-vitals": "^2.1.4"
