--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.37.1",
+    "d3": "^7.8.2",
+    "d3-force": "^3.0.0",
     "d3-scale": "^3.3.0",
     "d3-selection": "^1.4.2",
     "leaflet": "^1.9.3",
@@ -33,6 +35,7 @@
     "recharts": "^2.5.0",
     "sass": "^1.59.2",
     "styled-components": "^5.3.8",
+    "three": "^0.150.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
