--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.37.1",
+    "axios": "^1.3.4",
     "d3": "^7.8.2",
     "d3-force": "^3.0.0",
     "d3-scale": "^3.3.0",
