--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@coreui/coreui": "^4.2.6",
+    "@coreui/react": "^4.6.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@material-ui/core": "^4.12.4",
@@ -17,10 +19,12 @@
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.37.1",
     "axios": "^1.3.4",
+    "bootstrap": "^5.2.3",
     "d3": "^7.8.2",
     "d3-force": "^3.0.0",
     "d3-scale": "^3.3.0",
     "d3-selection": "^1.4.2",
+    "flickity": "^3.0.0",
     "formik": "^2.2.9",
     "leaflet": "^1.9.3",
     "node-sass": "^8.0.0",
@@ -33,10 +37,13 @@
     "react-router-config": "^5.1.1",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-wordcloud": "^1.2.7",
     "recharts": "^2.5.0",
     "sass": "^1.59.2",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.8",
+    "swiper": "^9.1.1",
     "three": "^0.150.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.2"
