--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -37,7 +37,7 @@ spring:
     hikari:
       password: ssafy
       username: root
-    url: jdbc:mysql://localhost:3306/tlens
+    url: jdbc:mysql://j8c206.p.ssafy.io:3306/tlens
   mail:
     host: smtp.gmail.com
     port: 587
