--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-leaflet": "^4.2.1",
+    "react-material-ui-carousel": "^3.4.2",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
