--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@mui/lab": "*",
     "@mui/material": "^5.11.13",
     "@mui/styled-engine-sc": "^5.11.11",
+    "@mui/x-date-pickers": "^6.0.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -24,6 +25,7 @@
     "d3-force": "^3.0.0",
     "d3-scale": "^3.3.0",
     "d3-selection": "^1.4.2",
+    "dayjs": "^1.11.7",
     "flickity": "^3.0.0",
     "formik": "^2.2.9",
     "leaflet": "^1.9.3",
