--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -58,6 +58,8 @@ dependencies {
     compileOnly "org.projectlombok:lombok"
     annotationProcessor "org.projectlombok:lombok"
 
+    // https://mvnrepository.com/artifact/org.jsoup/jsoup
+    implementation group: 'org.jsoup', name: 'jsoup', version: '1.15.4'
 }
 
 tasks.named('test') {
