feat: search-result update

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-burger-menu": "^3.0.9",
+    "react-d3-graph": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-leaflet": "^4.2.1",
