--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -30,6 +30,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.5.2'
+
+    implementation 'org.apache.commons:commons-lang3:3.5'
 
     //redis
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: '2.7.5'
