--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -38,11 +38,8 @@ dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: '2.7.5'
 
     // Swagger
-    implementation("io.springfox:springfox-swagger2:3.0.0")
-    implementation("io.springfox:springfox-swagger-ui:3.0.0")
-    implementation("io.springfox:springfox-data-rest:3.0.0")
-    implementation("io.springfox:springfox-bean-validators:3.0.0")
-    implementation("io.springfox:springfox-boot-starter:3.0.0")
+    implementation group: 'io.swagger', name: 'swagger-annotations', version: '1.6.10'
+    implementation 'org.springdoc:springdoc-openapi-ui:1.6.12'
 
     // JWT
     implementation 'com.auth0:java-jwt:4.2.1'
