--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -78,8 +78,8 @@ server:
       enabled: 'true'
       force: 'true'
       charset: UTF-8
-    contextPath: /
-  port: '8082'
+    contextPath: /api
+  port: '8080'
   compression:
     enabled: 'true'
     mime-types: application/json,application/xml,text/html,text/xml,text/plain,application/javascript,text/css
