--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -63,6 +63,9 @@ dependencies {
 
     //// https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple
     implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+
+    // https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java
+    implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.8.1'
 }
 
 tasks.named('test') {
