--- a/frontend/deploy_conf/nginx.conf
+++ b/frontend/deploy_conf/nginx.conf
@@ -24,6 +24,16 @@ server {
         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
+    ## Swagger
+    location ^~/doc/api/ {
+        proxy_pass http://tomcat/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Nginx-Proxy true;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     #error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
