--- a/frontend/deploy_conf/nginx.conf
+++ b/frontend/deploy_conf/nginx.conf
@@ -26,7 +26,7 @@ server {
 
     ## Swagger
     location ^~/doc/api/ {
-        proxy_pass http://tomcat/;
+        proxy_pass http://backend/;
         proxy_set_header Host $host;
         proxy_set_header X-Nginx-Proxy true;
         proxy_set_header X-Real-IP $remote_addr;
