--- a/frontend/deploy_conf/nginx.conf
+++ b/frontend/deploy_conf/nginx.conf
@@ -25,13 +25,12 @@ server {
     }
 
     ## Swagger
-    location ^~/doc/api/ {
-        proxy_pass http://backend/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Nginx-Proxy true;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+    location ~ ^/(swagger|webjars|configuration|swagger-resources|v3|csrf) {
+               proxy_pass http://localhost:8080;
+               proxy_set_header Host $host;
+               proxy_set_header X-Real-IP $remote_addr;
+               proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+               proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     #error_page  404              /404.html;
