--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "d3-force": "^3.0.0",
     "d3-scale": "^3.3.0",
     "d3-selection": "^1.4.2",
+    "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
     "flickity": "^3.0.0",
     "formik": "^2.2.9",
