--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -78,7 +78,7 @@ server:
       enabled: 'true'
       force: 'true'
       charset: UTF-8
-    contextPath: /
+    contextPath: /api/v1
   port: '8080'
   compression:
     enabled: 'true'
