--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -14,6 +14,7 @@ spring:
   redis:
     port: 6379
     host: j8c206.p.ssafy.io
+    password: ssafy
   jpa:
     hibernate:
       naming:
@@ -33,11 +34,15 @@ spring:
 #      password: nVNUcEiOY5
 #      username: S08P23C206@stg-yswa-kr-practice-db-master
 #    url: jdbc:mariadb://stg-yswa-kr-practice-db-master.mariadb.database.azure.com:3306/s08p23c206
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    hikari:
-      password: ssafy
-      username: root
-    url: jdbc:mysql://j8c206.p.ssafy.io:3306/tlens
+    driverClassName: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/tlens?serverTimezone=Asia/Seoul
+    username: root
+    password: ssafy
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    hikari:
+#      password: ssafy
+#      username: root
+#    url: jdbc:mysql://j8c206.p.ssafy.io:3306/tlens
   mail:
     host: smtp.gmail.com
     port: 587
