--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -34,15 +34,17 @@ spring:
 #      password: nVNUcEiOY5
 #      username: S08P23C206@stg-yswa-kr-practice-db-master
 #    url: jdbc:mariadb://stg-yswa-kr-practice-db-master.mariadb.database.azure.com:3306/s08p23c206
-    driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/tlens?serverTimezone=Asia/Seoul
-    username: root
-    password: ssafy
-#    driver-class-name: com.mysql.cj.jdbc.Driver
-#    hikari:
-#      password: ssafy
-#      username: root
-#    url: jdbc:mysql://j8c206.p.ssafy.io:3306/tlens
+
+#    driverClassName: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://localhost:3306/tlens?serverTimezone=Asia/Seoul
+#    username: root
+#    password: ssafy
+
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    hikari:
+      password: ssafy
+      username: root
+    url: jdbc:mysql://j8c206.p.ssafy.io:3306/tlens
   mail:
     host: smtp.gmail.com
     port: 587
@@ -83,8 +85,8 @@ server:
       enabled: 'true'
       force: 'true'
       charset: UTF-8
-    contextPath: /api/v1
-  port: '8080'
+    context-path: /api/v1
+  port: 8080
   compression:
     enabled: 'true'
     mime-types: application/json,application/xml,text/html,text/xml,text/plain,application/javascript,text/css
