--- a/kafka/KafkaConsumer/build.gradle
+++ b/kafka/KafkaConsumer/build.gradle
@@ -30,9 +30,9 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-web"
     implementation "org.springframework.kafka:spring-kafka"
 
-    implementation "org.apache.spark:spark-mllib_2.13:$apache_spark_version"
-//    implementation "org.apache.spark:spark-sql-kafka-0-10_2.13:$apache_spark_version"
-    implementation "org.apache.spark:spark-streaming-kafka-0-10_2.13:$apache_spark_version"
+    implementation "org.apache.spark:spark-mllib_2.12:$apache_spark_version"
+    implementation "org.apache.spark:spark-sql-kafka-0-10_2.12:$apache_spark_version"
+//    implementation "org.apache.spark:spark-streaming-kafka-0-10_2.13:$apache_spark_version"
 
     compileOnly "org.projectlombok:lombok"
     annotationProcessor "org.projectlombok:lombok"
