--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,9 +37,11 @@
     "react-apexcharts": "^1.4.0",
     "react-burger-menu": "^3.0.9",
     "react-d3-graph": "^2.6.0",
+    "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-input-mask": "^2.0.4",
     "react-leaflet": "^4.2.1",
     "react-material-ui-carousel": "^3.4.2",
     "react-redux": "^8.0.5",
