feat: 크롤러 디버깅 및 지역 언론 크롤링 기능 추가

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -76,9 +76,12 @@ dependencies {
     // https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.8.1'
 
-    //querydsl
+    // querydsl
     implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
     implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
+
+    // Korean-Summarizer
+    implementation 'com.github.tuguri8:korean-summarizer:0.1.2'
 }
 
 tasks.named('test') {
