--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -15,5 +15,13 @@ RUN mv chromedriver /usr/local/bin
 
 FROM openjdk:11-jdk
 COPY --from=builder build/libs/*.jar app.jar
+
+RUN apt-get update
+RUN wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+RUN apt -y install ./google-chrome-stable_current_amd64.deb
+RUN wget https://chromedriver.storage.googleapis.com/112.0.5615.28/chromedriver_linux64.zip
+RUN unzip chromedriver_linux64.zip
+RUN mv chromedriver /usr/local/bin
+
 EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "/app.jar"]
