--- a/kafka/spark-kafka-streaming/build.gradle
+++ b/kafka/spark-kafka-streaming/build.gradle
@@ -15,8 +15,10 @@ ext {
 }
 
 dependencies {
-//    implementation "org.apache.spark:spark-core_2.12:$apache_spark_version"
-//    implementation "org.apache.spark:spark-sql_2.12:$apache_spark_version"
     implementation "org.apache.spark:spark-sql-kafka-0-10_2.12:$apache_spark_version"
     compileOnly "org.apache.spark:spark-mllib_2.12:$apache_spark_version"
+    implementation 'org.openkoreantext:open-korean-text:2.3.1'
+    implementation 'mysql:mysql-connector-java:8.0.32'
+
+
 }
